--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,13 +60,7 @@ h5,
 h6 {
 	margin: 0 0 0.5rem 0;
 	color: rgb(var(--gray-dark));
-	line-height: 1.2;
-	font-family: inherit;
-}
-main h1,
-main h2,
-main h3,
-main h4 {
+	font-family: "Roboto Flex", system-ui, -apple-system, Segoe UI, Arial, sans-serif;
 	font-variation-settings: "wght" 650, "wdth" 110, "opsz" 48;
 	letter-spacing: normal;
 	line-height: 1.15;
